--- a/Trial.ipynb
+++ b/Trial.ipynb
@@ -5,11 +5,11 @@
       "execution_count": 49,
       "id": "69209122",
       "metadata": {
-        "id": "69209122",
-        "outputId": "3473e86b-6521-4464-bc06-18ce95fdf740",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "69209122",
+        "outputId": "3473e86b-6521-4464-bc06-18ce95fdf740"
       },
       "outputs": [
         {
@@ -37,12 +37,12 @@
       "execution_count": 50,
       "id": "e6eec3e3",
       "metadata": {
-        "id": "e6eec3e3",
-        "outputId": "0bbd7ea5-6ae8-4499-d270-8614058b31cf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 73
-        }
+        },
+        "id": "e6eec3e3",
+        "outputId": "0bbd7ea5-6ae8-4499-d270-8614058b31cf"
       },
       "outputs": [
         {
@@ -273,12 +273,12 @@
       "execution_count": 62,
       "id": "ab754a60",
       "metadata": {
-        "id": "ab754a60",
-        "outputId": "949f4c5d-da7b-438f-9048-4b77d9705f3c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 219
-        }
+          "height": 222
+        },
+        "id": "ab754a60",
+        "outputId": "949f4c5d-da7b-438f-9048-4b77d9705f3c"
       },
       "outputs": [
         {
@@ -323,27 +323,28 @@
       "cell_type": "code",
       "source": [
         "dataframe = spark.read.csv('movies.csv')\n",
-        "dataframe"
+        "dataframe.printSchema()"
       ],
       "metadata": {
-        "id": "rwKBPH-7xUxU",
-        "outputId": "dfefaff6-54b9-4d92-802b-090b76c530f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rwKBPH-7xUxU",
+        "outputId": "8fd9549e-2026-4b5c-802c-8448acad9ff0"
       },
       "id": "rwKBPH-7xUxU",
-      "execution_count": 63,
+      "execution_count": 78,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "DataFrame[_c0: string, _c1: string, _c2: string]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 63
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- _c0: string (nullable = true)\n",
+            " |-- _c1: string (nullable = true)\n",
+            " |-- _c2: string (nullable = true)\n",
+            "\n"
+          ]
         }
       ]
     },
@@ -354,11 +355,11 @@
         "dataframe.show()"
       ],
       "metadata": {
-        "id": "8JloUVdYyGyc",
-        "outputId": "7ae413b4-fb9e-4ded-c98c-9346c0f6255c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8JloUVdYyGyc",
+        "outputId": "7ae413b4-fb9e-4ded-c98c-9346c0f6255c"
       },
       "id": "8JloUVdYyGyc",
       "execution_count": 64,
@@ -432,39 +433,77 @@
         "id": "RqyxyHENyTVv"
       },
       "id": "RqyxyHENyTVv",
-      "execution_count": 70,
+      "execution_count": 73,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "Schema = StructType([ \\\n",
-        "                     StructFie])"
+        "schema = StructType([\n",
+        "    StructField(\"Id\",IntegerType(),True), \\\n",
+        "    StructField(\"movie_name\",StringType(),True), \\\n",
+        "    StructField(\"movies genre\",StringType(),True),\n",
+        "                     ])"
       ],
       "metadata": {
         "id": "JXoS12sy16xU"
       },
       "id": "JXoS12sy16xU",
-      "execution_count": null,
+      "execution_count": 84,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "from pyspark.sql.types import StructType,StructField, StringType, IntegerType\n",
-        "\n",
-        "schema = StructType([ \\\n",
-        "    StructField(\"Id\",IntegerType(),True), \\\n",
-        "    StructField(\"movie_name\",StringType(),True), \\\n",
-        "    StructField(\"movie_genre\",StringType(),True), \\\n",
-        "   \n",
-        "  ])"
+        "dataframe_v1=spark.read.csv(\"movies.csv\",header = True , sep=\"::\",schema=schema)\n",
+        "dataframe_v1.show(5)"
       ],
       "metadata": {
-        "id": "g0b-mEUS2lOD"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g0b-mEUS2lOD",
+        "outputId": "d780a86c-0b0a-4ba5-9e14-aa41dc271001"
       },
       "id": "g0b-mEUS2lOD",
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+--------------------+--------------------+\n",
+            "| Id|          movie_name|        movies genre|\n",
+            "+---+--------------------+--------------------+\n",
+            "|  2|      Jumanji (1995)|Adventure|Childre...|\n",
+            "|  3|Grumpier Old Men ...|    Comedy|Romance,,|\n",
+            "|  4|Waiting to Exhale...|      Comedy|Drama,,|\n",
+            "|  5|Father of the Bri...|            Comedy,,|\n",
+            "|  6|         Heat (1995)|Action|Crime|Thri...|\n",
+            "+---+--------------------+--------------------+\n",
+            "only showing top 5 rows\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "fqtnysdUPo01"
+      },
+      "id": "fqtnysdUPo01",
+      "execution_count": 91,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "pLFZrFU_UmG9"
+      },
+      "id": "pLFZrFU_UmG9",
       "execution_count": null,
       "outputs": []
     }
