--- a/Trial.ipynb
+++ b/Trial.ipynb
@@ -2,14 +2,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 1,
       "id": "69209122",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "69209122",
-        "outputId": "3473e86b-6521-4464-bc06-18ce95fdf740"
+        "outputId": "26a3357a-47f0-4e29-8533-de93ef69f1a5"
       },
       "outputs": [
         {
@@ -17,8 +17,19 @@
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: pyspark in /usr/local/lib/python3.7/dist-packages (3.3.1)\n",
-            "Requirement already satisfied: py4j==0.10.9.5 in /usr/local/lib/python3.7/dist-packages (from pyspark) (0.10.9.5)\n",
+            "Collecting pyspark\n",
+            "  Downloading pyspark-3.3.1.tar.gz (281.4 MB)\n",
+            "\u001b[K     |████████████████████████████████| 281.4 MB 41 kB/s \n",
+            "\u001b[?25hCollecting py4j==0.10.9.5\n",
+            "  Downloading py4j-0.10.9.5-py2.py3-none-any.whl (199 kB)\n",
+            "\u001b[K     |████████████████████████████████| 199 kB 61.3 MB/s \n",
+            "\u001b[?25hBuilding wheels for collected packages: pyspark\n",
+            "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for pyspark: filename=pyspark-3.3.1-py2.py3-none-any.whl size=281845512 sha256=68c41ee48e50d893e4a1c18b167b8258d82facd5eb3d22fdc0d60a6537ba746b\n",
+            "  Stored in directory: /root/.cache/pip/wheels/42/59/f5/79a5bf931714dcd201b26025347785f087370a10a3329a899c\n",
+            "Successfully built pyspark\n",
+            "Installing collected packages: py4j, pyspark\n",
+            "Successfully installed py4j-0.10.9.5 pyspark-3.3.1\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: py4j in /usr/local/lib/python3.7/dist-packages (0.10.9.5)\n"
           ]
@@ -34,15 +45,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 2,
       "id": "e6eec3e3",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 73
+          "height": 74
         },
         "id": "e6eec3e3",
-        "outputId": "0bbd7ea5-6ae8-4499-d270-8614058b31cf"
+        "outputId": "14b12f6d-f096-4810-a72a-4777007ea122"
       },
       "outputs": [
         {
@@ -53,9 +64,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-0c461bcc-b859-48ae-a822-11fc6f274f83\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-a7205192-59b9-4579-be3c-91cef03a623f\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-0c461bcc-b859-48ae-a822-11fc6f274f83\">\n",
+              "     <output id=\"result-a7205192-59b9-4579-be3c-91cef03a623f\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -243,7 +254,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving movies.csv to movies (2).csv\n"
+            "Saving movies.csv to movies.csv\n"
           ]
         }
       ],
@@ -254,7 +265,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 3,
       "id": "32d2d5cf",
       "metadata": {
         "id": "32d2d5cf"
@@ -270,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 4,
       "id": "ab754a60",
       "metadata": {
         "colab": {
@@ -278,14 +289,14 @@
           "height": 222
         },
         "id": "ab754a60",
-        "outputId": "949f4c5d-da7b-438f-9048-4b77d9705f3c"
+        "outputId": "0612b2ba-191d-46c5-cc69-ef62fc4527c9"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<pyspark.sql.session.SparkSession at 0x7f6863a2d6d0>"
+              "<pyspark.sql.session.SparkSession at 0x7f6e7366c710>"
             ],
             "text/html": [
               "\n",
@@ -295,7 +306,7 @@
               "        <div>\n",
               "            <p><b>SparkContext</b></p>\n",
               "\n",
-              "            <p><a href=\"http://685dccd208b8:4050\">Spark UI</a></p>\n",
+              "            <p><a href=\"http://710f6870e636:4050\">Spark UI</a></p>\n",
               "\n",
               "            <dl>\n",
               "              <dt>Version</dt>\n",
@@ -312,7 +323,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 62
+          "execution_count": 4
         }
       ],
       "source": [
@@ -330,10 +341,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rwKBPH-7xUxU",
-        "outputId": "8fd9549e-2026-4b5c-802c-8448acad9ff0"
+        "outputId": "99f4f3e6-13e1-4702-80b5-4b2ac4e176bc"
       },
       "id": "rwKBPH-7xUxU",
-      "execution_count": 78,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,10 +370,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8JloUVdYyGyc",
-        "outputId": "7ae413b4-fb9e-4ded-c98c-9346c0f6255c"
+        "outputId": "e5efbd58-30a5-4c4a-a603-88a9142b16c9"
       },
       "id": "8JloUVdYyGyc",
-      "execution_count": 64,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -411,17 +422,21 @@
         "id": "zKzmlnHt1ntW"
       },
       "id": "zKzmlnHt1ntW",
-      "execution_count": 68,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from pyspark.sql import SparkSession\n",
+        "from pyspark.sql.functions import split, col \n",
+        "import pyspark.sql.functions as f"
+      ],
       "metadata": {
         "id": "I2bVX36cPOL_"
       },
       "id": "I2bVX36cPOL_",
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -433,7 +448,7 @@
         "id": "RqyxyHENyTVv"
       },
       "id": "RqyxyHENyTVv",
-      "execution_count": 73,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -449,39 +464,54 @@
         "id": "JXoS12sy16xU"
       },
       "id": "JXoS12sy16xU",
-      "execution_count": 84,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "dataframe_v1=spark.read.csv(\"movies.csv\",header = True , sep=\"::\",schema=schema)\n",
-        "dataframe_v1.show(5)"
+        "df=spark.read.csv(\"movies.csv\",header = True , sep=\"::\",schema=schema)\n",
+        "df.show(truncate = False)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "g0b-mEUS2lOD",
-        "outputId": "d780a86c-0b0a-4ba5-9e14-aa41dc271001"
+        "outputId": "83e86079-7c15-48ed-fe66-f908b9eb0e5f"
       },
       "id": "g0b-mEUS2lOD",
-      "execution_count": 90,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+---+--------------------+--------------------+\n",
-            "| Id|          movie_name|        movies genre|\n",
-            "+---+--------------------+--------------------+\n",
-            "|  2|      Jumanji (1995)|Adventure|Childre...|\n",
-            "|  3|Grumpier Old Men ...|    Comedy|Romance,,|\n",
-            "|  4|Waiting to Exhale...|      Comedy|Drama,,|\n",
-            "|  5|Father of the Bri...|            Comedy,,|\n",
-            "|  6|         Heat (1995)|Action|Crime|Thri...|\n",
-            "+---+--------------------+--------------------+\n",
-            "only showing top 5 rows\n",
+            "+---+-------------------------------------+------------------------------+\n",
+            "|Id |movie_name                           |movies genre                  |\n",
+            "+---+-------------------------------------+------------------------------+\n",
+            "|2  |Jumanji (1995)                       |Adventure|Children's|Fantasy,,|\n",
+            "|3  |Grumpier Old Men (1995)              |Comedy|Romance,,              |\n",
+            "|4  |Waiting to Exhale (1995)             |Comedy|Drama,,                |\n",
+            "|5  |Father of the Bride Part II (1995)   |Comedy,,                      |\n",
+            "|6  |Heat (1995)                          |Action|Crime|Thriller,,       |\n",
+            "|7  |Sabrina (1995)                       |Comedy|Romance,,              |\n",
+            "|8  |Tom and Huck (1995)                  |Adventure|Children's,,        |\n",
+            "|9  |Sudden Death (1995)                  |Action,,                      |\n",
+            "|10 |GoldenEye (1995)                     |Action|Adventure|Thriller,,   |\n",
+            "|11 |American President, The (1995)       |Comedy|Drama|Romance,         |\n",
+            "|12 |Dracula: Dead and Loving It (1995)   |Comedy|Horror,,               |\n",
+            "|13 |Balto (1995)                         |Animation|Children's,,        |\n",
+            "|14 |Nixon (1995)                         |Drama,,                       |\n",
+            "|15 |Cutthroat Island (1995)              |Action|Adventure|Romance,,    |\n",
+            "|16 |Casino (1995)                        |Drama|Thriller,,              |\n",
+            "|17 |Sense and Sensibility (1995)         |Drama|Romance,,               |\n",
+            "|18 |Four Rooms (1995)                    |Thriller,,                    |\n",
+            "|19 |Ace Ventura: When Nature Calls (1995)|Comedy,,                      |\n",
+            "|20 |Money Train (1995)                   |Action,,                      |\n",
+            "|21 |Get Shorty (1995)                    |Action|Comedy|Drama,,         |\n",
+            "+---+-------------------------------------+------------------------------+\n",
+            "only showing top 20 rows\n",
             "\n"
           ]
         }
@@ -489,21 +519,75 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\n",
+        "df = combined.select('movie_name')\n",
+        "df2 = df.withcolumn('name'.split(col('movie_name'),' ').getItem(0)).show()\n"
+      ],
       "metadata": {
-        "id": "fqtnysdUPo01"
+        "id": "fqtnysdUPo01",
+        "outputId": "c361be26-c69c-412d-9538-c18a295ee438",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 209
+        }
       },
       "id": "fqtnysdUPo01",
-      "execution_count": 91,
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-16-117c0d609e0c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcombined\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcombined\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'movie_name'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdf2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwithcolumn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'movie_name'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetItem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'combined' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df1 = spark.read.format('csv').option(\"header\",\"true\").option(\"multiline\",\"true\").load(\"movies.csv\")\n",
+        "df1.show()"
+      ],
+      "metadata": {
+        "id": "pLFZrFU_UmG9"
+      },
+      "id": "pLFZrFU_UmG9",
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "pLFZrFU_UmG9"
+        "id": "DUgAcTOw2mDu"
       },
-      "id": "pLFZrFU_UmG9",
+      "id": "DUgAcTOw2mDu",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "AGUllAod7Re9"
+      },
+      "id": "AGUllAod7Re9",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Gcwn3Qcy7jth"
+      },
+      "id": "Gcwn3Qcy7jth",
       "execution_count": null,
       "outputs": []
     }
