--- a/Alten_modules_aug.ipynb
+++ b/Alten_modules_aug.ipynb
@@ -2,14 +2,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 34,
       "id": "e185f45e",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "e185f45e",
-        "outputId": "3765d684-b43a-4ea6-b851-5a5fe919e946"
+        "outputId": "a1324f78-fdd4-4cce-b424-382679e30d0b"
       },
       "outputs": [
         {
@@ -17,19 +17,8 @@
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting pyspark\n",
-            "  Downloading pyspark-3.3.1.tar.gz (281.4 MB)\n",
-            "\u001b[K     |████████████████████████████████| 281.4 MB 42 kB/s \n",
-            "\u001b[?25hCollecting py4j==0.10.9.5\n",
-            "  Downloading py4j-0.10.9.5-py2.py3-none-any.whl (199 kB)\n",
-            "\u001b[K     |████████████████████████████████| 199 kB 60.1 MB/s \n",
-            "\u001b[?25hBuilding wheels for collected packages: pyspark\n",
-            "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyspark: filename=pyspark-3.3.1-py2.py3-none-any.whl size=281845512 sha256=69a2d0a3a8345ebb01f555a8de7116d3917d718fcc494ce266105e2ae35fe903\n",
-            "  Stored in directory: /root/.cache/pip/wheels/43/dc/11/ec201cd671da62fa9c5cc77078235e40722170ceba231d7598\n",
-            "Successfully built pyspark\n",
-            "Installing collected packages: py4j, pyspark\n",
-            "Successfully installed py4j-0.10.9.5 pyspark-3.3.1\n",
+            "Requirement already satisfied: pyspark in /usr/local/lib/python3.8/dist-packages (3.3.1)\n",
+            "Requirement already satisfied: py4j==0.10.9.5 in /usr/local/lib/python3.8/dist-packages (from pyspark) (0.10.9.5)\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: py4j in /usr/local/lib/python3.8/dist-packages (0.10.9.5)\n"
           ]
@@ -62,13 +51,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 74
+          "height": 77
         },
         "id": "oaX9orjvsnSO",
-        "outputId": "2ac903e3-af3c-4a2b-ce8f-1193f1de9be2"
+        "outputId": "12a98d99-a6a7-4d96-9da5-a55c20c7e00c"
       },
       "id": "oaX9orjvsnSO",
-      "execution_count": 2,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "display_data",
@@ -78,9 +67,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-642960eb-1819-4409-b1bd-bcfffcccd983\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-7b24884e-1b60-4440-962b-38e50c4c468a\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-642960eb-1819-4409-b1bd-bcfffcccd983\">\n",
+              "     <output id=\"result-7b24884e-1b60-4440-962b-38e50c4c468a\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -268,7 +257,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving nba.csv to nba.csv\n"
+            "Saving nba.csv to nba (1).csv\n"
           ]
         }
       ]
@@ -286,7 +275,7 @@
         "id": "Kdmi0SJVstaY"
       },
       "id": "Kdmi0SJVstaY",
-      "execution_count": 5,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -300,16 +289,16 @@
           "height": 222
         },
         "id": "D_jYk-H_tUqH",
-        "outputId": "12a4ddee-3d07-4372-f091-7915b63de662"
+        "outputId": "8c9fc3ca-e2ca-4b2e-e2cb-f691e89a1d28"
       },
       "id": "D_jYk-H_tUqH",
-      "execution_count": 6,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<pyspark.sql.session.SparkSession at 0x7f86535d0790>"
+              "<pyspark.sql.session.SparkSession at 0x7f7e8ec162b0>"
             ],
             "text/html": [
               "\n",
@@ -319,7 +308,7 @@
               "        <div>\n",
               "            <p><b>SparkContext</b></p>\n",
               "\n",
-              "            <p><a href=\"http://debccf4f4feb:4050\">Spark UI</a></p>\n",
+              "            <p><a href=\"http://fb9dd0b25367:4050\">Spark UI</a></p>\n",
               "\n",
               "            <dl>\n",
               "              <dt>Version</dt>\n",
@@ -336,7 +325,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 37
         }
       ]
     },
@@ -349,7 +338,7 @@
         "id": "K3LCUyZ0tqSw"
       },
       "id": "K3LCUyZ0tqSw",
-      "execution_count": 11,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -362,10 +351,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NRMC_mE9tzNi",
-        "outputId": "9d1f711b-955c-47d5-9fe9-1bc2af0a03db"
+        "outputId": "535b768b-0e23-4576-e246-2e79aaf257fd"
       },
       "id": "NRMC_mE9tzNi",
-      "execution_count": 12,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,10 +401,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nKA3hh2AuUJ2",
-        "outputId": "3f3342bc-ac2c-4cb9-b25b-0c415e4894b9"
+        "outputId": "d80beef5-b0d0-4087-d97f-b418e022173f"
       },
       "id": "nKA3hh2AuUJ2",
-      "execution_count": 64,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -462,10 +451,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m_9RgOEIuvhL",
-        "outputId": "b82574df-c636-4bbe-c948-ca7bcf8910ad"
+        "outputId": "f036c166-3e20-462a-9a42-b08473bd3337"
       },
       "id": "m_9RgOEIuvhL",
-      "execution_count": 65,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -512,10 +501,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dejThMWovR2k",
-        "outputId": "5cfbc20e-261d-4b68-8547-c28b1d0f6868"
+        "outputId": "cad05b9f-886f-4b6c-d26c-247d2464d16a"
       },
       "id": "dejThMWovR2k",
-      "execution_count": 69,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -562,10 +551,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_lncEdsywZxz",
-        "outputId": "4bc3a425-824c-4e9c-cac2-f41c6d00873f"
+        "outputId": "3bc38e06-ef19-427f-e27c-119cf63253b8"
       },
       "id": "_lncEdsywZxz",
-      "execution_count": 85,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -609,13 +598,13 @@
       ],
       "metadata": {
         "id": "V74yM8370LXE",
-        "outputId": "7ac0df70-d36b-49c9-8b1f-621ef32b181b",
+        "outputId": "e4866f1d-fc88-49f6-a460-cf94d6dc12ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "V74yM8370LXE",
-      "execution_count": 76,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -650,13 +639,13 @@
       ],
       "metadata": {
         "id": "cA4VDGdS1uJ3",
-        "outputId": "26c135b5-c6cf-4bd4-9427-c5c6e04d85da",
+        "outputId": "84a792d7-7dc8-435b-d2e3-94821a2b0b3a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "cA4VDGdS1uJ3",
-      "execution_count": 92,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -702,14 +691,14 @@
       ],
       "metadata": {
         "id": "VYHfpwET2duj",
-        "outputId": "ad549919-7ce3-42bb-fbe7-19830cb259e4",
+        "outputId": "979e64e1-0df0-41d0-e63d-5db4717bf98b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 510
+          "height": 516
         }
       },
       "id": "VYHfpwET2duj",
-      "execution_count": 94,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -754,36 +743,35 @@
             }
           },
           "metadata": {},
-          "execution_count": 94
+          "execution_count": 46
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "df4.write.csv('filter.csv')\n",
-        "df4.write.csv('filter2.csv')"
+        "df4.write.csv('filter3.csv',Header = True)"
       ],
       "metadata": {
         "id": "MJQeMD3C3knS",
-        "outputId": "47cc8615-7def-4cc4-97b3-538429cb37e6",
+        "outputId": "9c471aa2-0191-45fa-84ad-2dfaa1872ce1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 172
         }
       },
       "id": "MJQeMD3C3knS",
-      "execution_count": 101,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "AttributeError",
+          "ename": "TypeError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-101-4f86d49e4c85>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf4\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcsv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'filter3.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSchema\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'Schema'"
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-48-77e76c29d1bc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf4\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcsv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'filter3.csv'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mHeader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: csv() got an unexpected keyword argument 'Header'"
           ]
         }
       ]
@@ -795,48 +783,11 @@
         "new.show()"
       ],
       "metadata": {
-        "id": "vImp7tqV45-u",
-        "outputId": "faddfaaf-f9fc-4f57-8c18-c30625fa5987",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "vImp7tqV45-u"
       },
       "id": "vImp7tqV45-u",
-      "execution_count": 96,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "+---+-----------------+---+--------------------+------------------+\n",
-            "|_c0|              _c1|_c2|                 _c3|               _c4|\n",
-            "+---+-----------------+---+--------------------+------------------+\n",
-            "|5.0|      Will Barton| SF|      Denver Nuggets|           Memphis|\n",
-            "|1.0|     Tyreke Evans| SG|New Orleans Pelicans|           Memphis|\n",
-            "|1.0|     Trevor Ariza| SF|     Houston Rockets|              UCLA|\n",
-            "|9.0|       Tony Allen| SG|   Memphis Grizzlies|    Oklahoma State|\n",
-            "|2.0|      Tim Frazier| PG|New Orleans Pelicans|        Penn State|\n",
-            "|6.0|      Steve Novak| SF|     Milwaukee Bucks|         Marquette|\n",
-            "|0.0|    Spencer Hawes| PF|   Charlotte Hornets|        Washington|\n",
-            "|8.0|     Shelvin Mack| PG|           Utah Jazz|            Butler|\n",
-            "|6.0|  Sean Kilpatrick| SG|       Brooklyn Nets|        Cincinnati|\n",
-            "|4.0|       Ryan Kelly| PF|  Los Angeles Lakers|              Duke|\n",
-            "|0.0|Russell Westbrook| PG|Oklahoma City Thu...|              UCLA|\n",
-            "|8.0|         Rudy Gay| SF|    Sacramento Kings|       Connecticut|\n",
-            "|2.0|   Rodney Stuckey| PG|      Indiana Pacers|Eastern Washington|\n",
-            "|8.0|      Robin Lopez|  C|     New York Knicks|          Stanford|\n",
-            "|1.0|   Reggie Jackson| PG|     Detroit Pistons|    Boston College|\n",
-            "|2.0|   Raymond Felton| PG|    Dallas Mavericks|    North Carolina|\n",
-            "|6.0|       Randy Foye| SG|Oklahoma City Thu...|         Villanova|\n",
-            "|7.0|   Ramon Sessions| PG|  Washington Wizards|            Nevada|\n",
-            "|9.0|      Rajon Rondo| PG|    Sacramento Kings|          Kentucky|\n",
-            "|4.0|     Paul Millsap| PF|       Atlanta Hawks|    Louisiana Tech|\n",
-            "+---+-----------------+---+--------------------+------------------+\n",
-            "only showing top 20 rows\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
