--- a/TESTING_ (1).ipynb
+++ b/TESTING_ (1).ipynb
@@ -802,15 +802,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "3R_j5W9yg7yr"
-      },
-      "execution_count": 167,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "QUES 5 : Write an sql statement on the existing dataframe with an condition to fetch the maximum count_no."
@@ -822,16 +813,53 @@
     {
       "cell_type": "code",
       "source": [
-        "df1.createOrReplaceTempView(\"ME\")\n",
+        "dataframe.createOrReplaceTempView(\"ME\")\n",
         "spark.sql(\"SELECT COUNT(*) FROM ME\").show()\n",
-        "#for Movie_id column\n",
-        "spark.sql(\"SELECT COUNT(distinct Movie_id) FROM ME\").show()"
+        "spark.sql(\"SELECT COUNT(distinct Watch_count) FROM ME\").show()"
       ],
       "metadata": {
-        "id": "_YiIBkHJg7pT"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_YiIBkHJg7pT",
+        "outputId": "16bd1c25-4c6d-4dc8-e928-866bdb81b22d"
       },
-      "execution_count": 167,
-      "outputs": []
+      "execution_count": 177,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+--------+\n",
+            "|count(1)|\n",
+            "+--------+\n",
+            "|    5974|\n",
+            "+--------+\n",
+            "\n",
+            "+---------------------------+\n",
+            "|count(DISTINCT Watch_count)|\n",
+            "+---------------------------+\n",
+            "|                       3374|\n",
+            "+---------------------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "QUES 6 : reate a temporary table from the Existing dataframe\n",
+        "\n",
+        "I. Perform the self join on the temporary table\n",
+        "\n",
+        "II. Perform the union operation on the temporary table (you can use same table twice)\n",
+        "\n",
+        "III. Delete the temporary table"
+      ],
+      "metadata": {
+        "id": "fuASilhfEWkc"
+      }
     },
     {
       "cell_type": "code",
